<resources>
    <string name="app_name">PaintTheTown</string>
    <!-- Strings related to creating account and login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="paint_the_town">Paint the Town</string>
    <string name="login">login</string>
    <string name="sign_up">sign up</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_account">Register Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>